# openvpn-python-plugin

./: .gitignore  Makefile.am  Makefile.in  README.rst  aclocal.m4  config.h.in  configure  configure.ac  openvpn-python-plugin.spec
src/: Makefile.am  Makefile.in  openvpn_plugin.py  plugin.c  plugin.h
